lib/tests/ui/trait_with_type.stderr
error: trait must only define methods
 --> $DIR/trait_with_type.rs:3:5
  |
3 |     type Foo;
  |     ^^^^
